# portfolio_management

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
AngelCopilot/: AngelCopilot_evaluation.ipynb  evaluation.py
AngelCopilot/data/: evaluation_dataset.csv
Portfolio Management/: Investigate_ETFs.ipynb  data_inspection.ipynb  utils.py
Portfolio Management/.ipynb_checkpoints/: Investigate_ETFs-checkpoint.ipynb
Portfolio Management/Historical_data/: EMIM.AS.csv  IWVL.csv  utils.py
Portfolio Management/Historical_data/10_2020/: EUNA.DE.csv  IUSN.DE.csv  IWDA.csv  IWVL.MI.csv  TRET.csv
Portfolio Management/lib/: data_inspection_utils.py  utils.py
Portfolio_Management/: data_inspection.ipynb  optimization.ipynb
Portfolio_Management/Historical_data/12_2020/: EMIM.csv  EUNA.csv  IEAG.csv  IUSN.csv  IWDA.csv  IWVL.csv  TRET.csv
Portfolio_Management/Historical_data/manually_downloaded/: EMIM.AS.csv  EUNA.csv  IEAG.AS.csv  IUSN.csv  IWDA.AS.csv  IWVL.csv  TRET.csv
Portfolio_Management/lib/: data_inspection_utils.py  optimization_utils.py  utils.py
exploration/: Investigate_ETFs.ipynb
tests/Portfolio_Management/lib/: test_data_inspection_utils.py
